# tradewinds-web

./: .env  .env.development  .env.production  .env.tauri  .gitignore  COMPONENT_ERROR_FIX.md  Cargo.toml  OPTIMIZATION_COMPLETE_FINAL.md  OPTIMIZATION_SUGGESTIONS.md  README.md  USER_SEARCH_FEATURE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/rules/: chinese.mdc
docs/optimization-archive/: CODE_OPTIMIZATION_REPORT.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_FINAL_REVIEW.md  OPTIMIZATION_PHASE10.md  OPTIMIZATION_PHASE2.md  OPTIMIZATION_PHASE4.md  OPTIMIZATION_PHASE5.md  OPTIMIZATION_PHASE6.md  OPTIMIZATION_PHASE7.md  OPTIMIZATION_PHASE8.md  OPTIMIZATION_PHASE9.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  SERVER_PAGINATION_OPTIMIZATION.md
scripts/: update-imports.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240318000000_create_sys_config.sql  20240318000001_init_sys_config.sql
src-tauri/src/: error.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/handlers/: auth.rs  config.rs  mod.rs
src-tauri/src/utils/: mod.rs  pagination.rs  response.rs
src/api/: index.ts  system.ts  types.ts
src/components/: DynamicMenu.vue  MenuIcon.vue  OptimizedImage.vue  SearchHighlight.vue  SearchSuggestions.vue  VirtualList.vue
src/composables/: index.ts  useComponentLifecycle.ts
src/config/: index.ts
src/constants/: index.ts  sidebar.ts
src/directives/: lazy.ts  permission.ts
src/i18n/: index.ts
src/layout/: index.vue
src/locales/: en.ts  zh-CN.ts
src/mock.disabled/: auth.ts  contact-record.ts  customer.ts  index.ts  menu.ts  user.ts
src/router/: index.ts
src/stores/: app.ts  customer.ts  index.ts  menu.ts  order.ts  product.ts  role.ts  user.ts
src/styles/: index.scss  scrollbar.scss  sidebar-menu.scss  variables.scss
src/types/: components.d.ts  (+8 more)
(+127 files in other folders)
